BPMN js profile
